@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-21T01:37:50Z",
-  "count" : 10,
+  "timestamp" : "2022-06-03T08:27:00Z",
+  "count" : 5,
   "count_minmax" : [ 5, 10 ],
-  "count_decinc" : [ -0, +10 ],
-  "uniques" : 8,
+  "count_decinc" : [ -5, +10 ],
+  "uniques" : 5,
   "uniques_minmax" : [ 4, 8 ],
-  "uniques_decinc" : [ -0, +8 ]
+  "uniques_decinc" : [ -3, +8 ]
 }
