@@ -1,11 +1,11 @@
 {
-  "count": 23,
-  "uniques": 9,
+  "count": 18,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 10,
-      "uniques": 8
+      "count": 5,
+      "uniques": 5
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
