@@ -1,3 +1,10 @@
+2022-06-03T08:27:00Z:
+* notice: last 14d: unq all: 6 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 70 167 / 86 190
+* notice: next accum: outdated-unq outdated-all / unq all: 70 167 / 83 185
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -5 / +8 +10 -3 -5 / 5 5
+* notice: removed / changed dates: [] / [2022-05-20]
+
 2022-06-03T01:52:42Z:
 * notice: last 14d: unq all: 9 23
 * notice: prev accum: outdated-unq outdated-all / unq all: 68 164 / 85 187
